--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-lg-12">
                                 <div class="form-group">
-                                    {{ form_label(form.title, 'Titolo / Nome immobile'|default(null) ,{'label_attr': {'class': 'control-label text-success'}}) }}
+                                    {{ form_label(form.title, 'Titolo / Nome immobile'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.title) }}
                                     {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                                 </div>
@@ -100,14 +100,12 @@
 
                             <div class="col-lg-4">
                                 <div class="form-group">
-                                    {#
                                     {{ form_label(form.planimetria, 'Planimetria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.planimetria) }}
                                     {{ form_widget(form.planimetria, {'attr': {'class': 'form-control'}}) }}
                                     <div id="drop-planimetria" class="dropzone col-lg-12" action="#">
                                         <div class="dropzone-previews"></div>
                                     </div>
-                                    #}
                                 </div>
                             </div>
 
@@ -138,7 +136,8 @@
                             </div>
 
                             <div class="col-lg-6">
-
+                                <h3>Caratteristiche</h3>
+                                {#
                                 <div class="form-group ">
                                     {{ form_label(form.featurevalues, 'Caratteristiche'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.featurevalues) }}
@@ -146,15 +145,25 @@
                                         {{ form_widget(form.featurevalues, {'attr': {'class': 'form-control'}}) }}
                                     </div>
                                 </div>
+                                #}
+                                {#
+                                <div class="form-group ">
+                                    {{ form_label(form.featurevalues_, 'Caratteristiche'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.featurevalues_) }}
+                                    <div>
+                                        {{ form_widget(form.featurevalues_, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                </div>
+                                #}
 
-                                {#<div class="form-group">
-                                    <h3>Caratteristiche</h3>
-                                    <ul class="tags">
-                                        {% for featurevalue in form.featurevalues %}
-                                            <li>{{ form_widget(featurevalue, {'attr': {'class': 'form-control'}}) }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>#}
+                                {% for feature in features %}
+                                    <div class="form-group">
+                                        {{ form_label(form['featurevalues_'~loop.index], feature.title ,{'label_attr': {'class': 'control-label'}}) }}
+                                        {{ form_errors(form['featurevalues_'~loop.index]) }}
+                                        {{ form_widget(form['featurevalues_'~loop.index], {'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                {% endfor %}
+
                             </div>
 
                         </div>
