Modifiche di stile su frontend

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -99,14 +99,14 @@
                             </div>
 
                             <div class="col-lg-4">
-                                <div class="form-group">
+                                {#<div class="form-group">
                                     {{ form_label(form.planimetria, 'Planimetria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.planimetria) }}
                                     {{ form_widget(form.planimetria, {'attr': {'class': 'form-control'}}) }}
                                     <div id="drop-planimetria" class="dropzone col-lg-12" action="#">
                                         <div class="dropzone-previews"></div>
                                     </div>
-                                </div>
+                                </div>#}
                             </div>
 
                             <div class="col-lg-4">
