--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -28,8 +28,8 @@
     <div class="ibox-title">
         <h5>Categorie trovate <span>{{ features|length }}</span></h5>
         <div class="ibox-tools">
-            <a class="btn btn-primary btn-xs" href="{{ path('create_features') }}"><i class="fa fa-lg fa-plus"></i> Aggiungi Categoria</a>
-            <a class="btn btn-primary btn-xs" href="{{ path('create_featurevalues') }}"><i class="fa fa-lg fa-plus"></i> Aggiungi Caratteristica</a>
+            <a class="btn btn-primary btn-xs" href="{{ path('create_features') }}"><i class="fa fa-lg fa-plus"></i> <strong style="font-size:16px">Categoria</strong></a>
+            <a class="btn btn-primary btn-xs" href="{{ path('create_featurevalues') }}"><i class="fa fa-lg fa-plus"></i> <strong style="font-size:16px">Caratteristica</strong></a>
         </div>
     </div>
     <div class="ibox-content">
@@ -37,7 +37,7 @@
             <ul class="col-md-12" style="list-style: none; margin: 0; padding: 0; ">
                 <li class="col-md-12" style="border-bottom: 1px solid #ddd; margin-bottom:5px;">
                     <div class="col-md-12">
-                        <p class="col-md-2">#</p>
+                        <p class="col-md-1">#</p>
                         <p class="feature col-md-4">Nome</p>
                         <p class="col-md-4">Azioni</p>
                     </div>
@@ -45,11 +45,11 @@
             {% for feature in features %}
                 <li class="col-md-12" style="border-bottom: 1px solid #ddd; margin-bottom:5px;">
                     <div class="col-md-12">
-                        <p class="col-md-2">
+                        <p class="col-md-1">
                             {{feature.idTblCatalogueFeature}}
                         </p>
                         <p class="col-md-4">
-                            <a href="{{ path('category_featurevalue', {'id' : feature.idTblCatalogueFeature}) }}" title="Modifica" >{{feature.title}}</a>
+                            <a class="feature-title" href="{{ path('category_featurevalue', {'id' : feature.idTblCatalogueFeature}) }}" title="Modifica" >{{feature.title}}</a>
                             <a class="btn btn-outline btn-default btn-xs btn_categoria_apri"><i class="fa fa-lg fa-chevron-down"></i> Apri</a>
                             <a class="btn btn-outline btn-default btn-xs btn_categoria_chiudi" style="display: none;"><i class="fa fa-lg fa-chevron-up"></i> Chiudi</a>
                         </p>
@@ -59,18 +59,16 @@
                         </p>
                         <div class="col-md-12 featurevalues-container" style="display: none; padding:0 !important">
                             <ul style="list-style: none; margin: 0; padding: 0;">
-                                <li class="col-md-12" style="border-bottom: 1px solid #ddd; margin-bottom:5px;">
+                                <li class="col-md-12" >
                                     <div class="col-md-12">
-                                        <p class="col-md-1">ID</p>
-                                        <p class="col-md-11">Nome Caratteristica</p>
+                                        <p class="col-md-1">{#ID#}</p>
+                                        <p class="col-md-11">{#Nome Caratteristica#}</p>
                                     </div>
                                 </li>
                                 {% for featuresvalue in feature.featurevalues %}
                                 <li class="col-md-12">
                                     <div class="col-md-12">
-                                        <p class="col-md-1">
-                                            {{featuresvalue.idTblCatalogueFeaturevalue}}
-                                        </p>
+                                        <p class="col-md-1">></p>
                                         <div class="btn-group col-md-4">
                                             <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{ featuresvalue.title }}</a>
                                             <ul class="dropdown-menu">
@@ -115,6 +113,7 @@
         $(document).ready(function(){
             $('.btn_categoria_apri').click(function(e) {
                 e.preventDefault();
+                $(this).parent().find('.feature-title').css('font-weight', 'bold');
                 $(this).parent().parent().find('.featurevalues-container').removeClass('categoria_chiusa').addClass('categoria_aperta').show();
                 $(this).parent().find('.btn_categoria_chiudi').show();
                 $(this).hide();
@@ -122,6 +121,7 @@
 
             $('.btn_categoria_chiudi').click(function(e) {
                 e.preventDefault();
+                $(this).parent().find('.feature-title').css('font-weight', 'normal');
                 $(this).parent().parent().find('.featurevalues-container').removeClass('categoria_aperta').addClass('categoria_chiusa').hide();
                 $(this).parent().find('.btn_categoria_apri').show();
                 $(this).hide();
