--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
@@ -1,4 +1,3 @@
-{# src/QwebCMS/CatalogoBundle/Resources/views/Random/index.html.twig #}
 {% extends 'layout.html.twig' %}
 
 {% block title %}Categorie{% endblock %}
@@ -12,74 +11,63 @@
         <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Catalogo</span> <span class="fa arrow"></span></a>
         <ul class="nav nav-second-level collapse in">
             <li><a href="{{ path('welcome') }}">Dashboard</a></li>
-            <li>
+            <li class="active">
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
-                <ul class="nav nav-third-level collapse">
+                <ul class="nav nav-third-level collapse in">
                     {% for category in categories %}
-                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        {% if id ==  category.idTblCatalogueCategory %}
+                            <li class="active"><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        {% else %}
+                            <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
             </li>
-            <li class="active"><a href="{{ path('categories') }}">Categorie</a></li>
+            <li><a href="{{ path('categories') }}">Categorie</a></li>
             <li><a href="{{ path('features') }}">Caratteristiche</a></li>
         </ul>
     </li>
 {% endblock %}
 
-{% block pagetitle %}
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-4">
-        <h2>Lista Categorie</h2>
-        <ol class="breadcrumb">
-            <li>
-                <a href="/">Dashboard</a>
-            </li>
-            <li class="active">
-                <strong>Categorie</strong>
-            </li>
-        </ol>
-    </div>
-</div>
-{% endblock %}
-
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Categorie <span>{{ pagination.getTotalItemCount }}</span></h5>
+        <h5>Categoria: <span class="text-success">{{ category.title }}</span></h5>
         <div class="ibox-tools">
-            <a class="btn btn-primary btn-xs" href="{{ path('create_category') }}">Crea nuova Categoria</a>
-            <a class="collapse-link">
-                <i class="fa fa-chevron-up"></i>
-            </a>
+            <a class="btn btn-primary btn-xs" href="{{ path('create_category') }}"><i class="fa fa-lg fa-plus"></i> Categoria</a>
+            <a class="btn btn-primary btn-xs" href="{{ path('create_product') }}"><i class="fa fa-lg fa-plus"></i> Prodotto</a>
         </div>
     </div>
     <div class="ibox-content">
-        {{ knp_pagination_filter(pagination, {'title': 'Nome Categoria', 'idTblCatalogueCategory':'Id'}) }}
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Prodotto', 'shortDescription': 'Descrizione', 'idTblCatalogueProduct':'Id'}) }}
         <div class="clearfix"></div>
         <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                     <tr>
                         {# sorting of properties based on query components #}
-                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Codice', 'a.cod') }}</th>
+                        {#<th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>#}
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
-                        <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.description') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
+                        <th>Stato</th>
                         <th>Azioni</th>
                     </tr>
                 </thead>
                 <tbody>
-                {% for category in pagination %}
+                {% for product in pagination %}
                     <tr {% if loop.index is odd %}class="color"{% endif %}>
-                        <td>{{category.idTblCatalogueCategory}}</td>
-                        <td>{{category.title}}</td>
-                        <td>{{category.description}}</td>
+                        <td>{{ product.cod }}</td>
+                        {#<td>{{ product.id }}</td>#}
+                        <td>{{ product.title }}</td>
+                        <td>{{ product.shortDescription }}</td>
+                        <td>{% if product.pub == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>
-                            <a href="{{ path('update_category', {'id' : category.idTblCatalogueCategory}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
-                            <a href="{{ path('delete_category', {'id' : category.idTblCatalogueCategory}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
+                            <a href="{{ path('update_product', {'id' : product.idTblCatalogueProduct}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
+                            <a href="{{ path('delete_product', {'id' : product.idTblCatalogueProduct}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
-
                 </tbody>
             </table>
             {# display navigation #}
