--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
 
+{% block menu %}
+    <li class="active">
+        <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Catalogo</span> <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level collapse in">
+            <li><a href="{{ path('welcome') }}">Dashboard</a></li>
+            <li>
+                <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
+                <ul class="nav nav-third-level collapse">
+                    {% for category in categories %}
+                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li><a href="{{ path('categories') }}">Categorie</a></li>
+            <li class="active"><a href="{{ path('features') }}">Caratteristiche</a></li>
+        </ul>
+    </li>
+{% endblock %}
+
 {% block pagetitle %}
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-4">
@@ -49,7 +68,7 @@
                             {{feature.idTblCatalogueFeature}}
                         </p>
                         <p class="col-md-4">
-                            <a class="feature-title" href="{{ path('category_featurevalue', {'id' : feature.idTblCatalogueFeature}) }}" title="Modifica" >{{feature.title}}</a>
+                            <a class="feature-title" href="#" title="Modifica" >{{feature.title}}</a>
                             <a class="btn btn-outline btn-default btn-xs btn_categoria_apri"><i class="fa fa-lg fa-chevron-down"></i> Apri</a>
                             <a class="btn btn-outline btn-default btn-xs btn_categoria_chiudi" style="display: none;"><i class="fa fa-lg fa-chevron-up"></i> Chiudi</a>
                         </p>
