Cancellazione della foto implica anche la cancellazione dei file originali e generati (solo per ambiente DEV)

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Photo/delete.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Photo/delete.html.twig
@@ -9,3 +9,15 @@
         });
     </script>
 {% endfor %}
+
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <script>
+        $(document).ready(function(){
+            swal({
+                title: "Errore!",
+                text: "{{ flashMessage }}",
+                type: "error"
+            });
+        });
+    </script>
+{% endfor %}
