Allineati template e controller a nuovo menu con categorie

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -18,6 +18,25 @@
     </div>
 {% endblock %}
 
+{% block menu %}
+    <li class="active">
+        <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Catalogo</span> <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level collapse in">
+            <li><a href="{{ path('welcome') }}">Dashboard</a></li>
+            <li class="active">
+                <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
+                <ul class="nav nav-third-level collapse">
+                    {% for category in categories %}
+                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li><a href="{{ path('categories') }}">Categorie</a></li>
+            <li><a href="{{ path('features') }}">Caratteristiche</a></li>
+        </ul>
+    </li>
+{% endblock %}
+
 {% block content %}
 <div>
     {{ form_start(form) }}
@@ -29,7 +48,7 @@
                     {% if id_album > 0 %}
                     <li class=""><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
                     <li class="active"><a data-toggle="tab" href="#tab-2">Immagini</a></li>
-                    <li class=""><a data-toggle="tab" href="#tab-3">Personalizza</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-3">Personalizza Foto</a></li>
                     {% else %}
                     <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
                     <li class="disabled"><a>Immagini</a></li>
