Sistemazione frontend modifica prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -160,7 +160,7 @@
                                     <div class="form-group">
                                         {{ form_label(form['featurevalues_'~feature.idTblCatalogueFeature], feature.title ,{'label_attr': {'class': 'control-label'}}) }}
                                         {{ form_errors(form['featurevalues_'~feature.idTblCatalogueFeature]) }}
-                                        {{ form_widget(form['featurevalues_'~feature.idTblCatalogueFeature], {'attr': {'class': 'form-control'}}) }}
+                                        {{ form_widget(form['featurevalues_'~feature.idTblCatalogueFeature], {'attr': {'class': ''}}) }}
                                     </div>
                                 {% endfor %}
                             </div>
