--- a/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/new.html.twig
@@ -72,6 +72,16 @@
                                 </div>
                             </div>
 
+                            <div class="col-md-6">
+                                {% if form.featurevalue_inherit is defined %}
+                                    {{ form_label(form.featurevalue_inherit, 'Dipende da'|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                                    {{ form_errors(form.featurevalue_inherit) }}
+                                    <div class="col-lg-12 m-l-n">
+                                        {{ form_widget(form.featurevalue_inherit, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
+                                    </div>
+                                {% endif %}
+                            </div>
+
                             <div class="col-md-12">
                                 {{ form_label(form.save, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
                                 {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
