Aggiornato avviso dopo eliminazione prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
@@ -98,7 +98,7 @@
         <script>
             $(document).ready(function(){
                 swal({
-                    title: "Cancellata!",
+                    title: "Cancellato!",
                     text: "{{ flashMessage }}",
                     type: "success"
                 });
